# KMRIIWA_ROS2_WS

./: .gitignore  README.md  frames_2025-03-18_16.57.46.gv  gazebo_debug.sh  launch_gazebo_sim.sh  x11_test.sh
src/: ROS log
src/kmr_behaviortree/: CMakeLists.txt  README.md  package.xml
src/kmr_behaviortree/behavior_trees/: test.xml
src/kmr_behaviortree/launch/: bt.launch.py
src/kmr_behaviortree/param/: param.yaml
src/kmr_behaviortree/src/: behavior_tree_node.cpp
src/kmr_bringup/: CMakeLists.txt  package.xml
src/kmr_bringup/launch/: rviz.launch.py  state_publisher.launch.py
src/kmr_bringup/rviz/: model.rviz  tf3.rviz
src/kmr_bringup/scripts/: dummy_joint_states.cpp
src/kmr_bringup/urdf/: iiwa14.urdf  kmriiwa.urdf  kmriiwa_withcameraframes.urdf
src/kmr_communication/: CMakeLists.txt  README.md  README_PROTOCOL.md  package.xml  prompt for TCP framing on Java end.txt
src/kmr_communication/doc/: heartbeat_implementation_simple.md
src/kmr_communication/launch/: kmr_robust_communication.launch.py  monitoring.launch.py  odom_laser.launch.py  sunrise_communication.launch.py
src/kmr_communication/nodes/: buffer.py  communication_health_monitor.py  emergency_stop_bridge.py  import unittest.py  kmp_commands_node.py  kmp_laserscan_node.py  kmp_odometry_node.py  kmp_statusdata_node.py  lbr_commands_node.py  lbr_sensordata_node.py  lbr_statusdata_node.py  safety_monitor.py  tcpSocket.py  test2.py  udpSocket.py  view_frames.py
src/kmr_communication/param/: bringup.yaml
src/kmr_communication/script/: __init__.py  (+21 more)
src/kmr_concatenator/: CMakeLists.txt  README.md  package.xml
src/kmr_manipulator/: CMakeLists.txt  README.md  UPGRADE_INSTRUCTIONS.md  create_message_packages.sh  package.xml
src/kmr_manipulator/launch/: gripper_node.launch.py  multiple_cameras.launch.py  object_detection.launch.py
src/kmr_manipulator/msg_definitions/: README.md
src/kmr_manipulator/nodes/gripper/: gripper_node.py
src/kmr_manipulator/nodes/realsense/: object_detection_node.py
src/kmr_moveit2/: .project  CMakeLists.txt  README.md  package.xml
src/kmr_msgs/: CMakeLists.txt  README.md  package.xml
src/kmr_navigation2/: CMakeLists.txt  README.md  package.xml
src/kmr_simulation/: CMakeLists.txt  README.md  package.xml
src/kmr_slam/: CMakeLists.txt  README.md  package.xml
src/kmr_slam/config/: kmr_2d_cartographer.lua
src/kmr_slam/launch/: cartographer.launch.py  rtabmap.launch.py
src/kmr_slam/rviz/: kmr_cartographer_withd435.rviz
src/kmr_slam_toolbox/: CMakeLists.txt  README.md  package.xml
src/object_analytics_msgs/: CMakeLists.txt  package.xml
src/object_msgs/: CMakeLists.txt  package.xml
src/pipeline_srv_msgs/: CMakeLists.txt  package.xml
(+57 files in other folders)
