<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kmr_slam</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ninamwa@stud.ntnu.no">nina</maintainer>
  <license>TODO: License declaration</license>
  
  <!-- Added runtime dependencies for ROS 2 Humble -->
  <exec_depend>cartographer</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
